# Easy

./: build.gradle  config.gradle  gradlew  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
cmake/: build.gradle
cmake/src/main/: AndroidManifest.xml
cmakea-module/: build.gradle
cmakea-module/src/main/cpp/jsoncpp/: CMakeLists.txt
cmakea-simple/: build.gradle
cmakea-simple/src/main/: AndroidManifest.xml
cmakea-simple/src/main/cpp/: CMakeLists.txt  native_hello.cpp
cmakeso-module/: build.gradle
cmakeso-simple/: build.gradle
cmakeso-simple/src/main/: AndroidManifest.xml
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
mvvm/: build.gradle
mvvm/src/main/: AndroidManifest.xml
mvvm_android/: build.gradle
mvvm_android/src/main/: AndroidManifest.xml
mvvm_app/: build.gradle
mvvm_app/src/main/: AndroidManifest.xml
mvvm_base/: build.gradle
mvvm_base/src/main/: AndroidManifest.xml
mvvm_flutter/: build.gradle
mvvm_flutter/src/main/: AndroidManifest.xml
mvvm_kotlin/: build.gradle
mvvm_kotlin/src/main/: AndroidManifest.xml
mvvm_user/: build.gradle
mvvm_user/src/main/: AndroidManifest.xml
mvvm_wechat/: build.gradle
mvvm_wechat/src/main/: AndroidManifest.xml
plugin-module/: build.gradle
router/: build.gradle
router-core/: build.gradle
router-core/src/main/: AndroidManifest.xml
router-module1/: build.gradle
router-module1/src/main/: AndroidManifest.xml
router-module2/: build.gradle
router-module2/src/main/: AndroidManifest.xml
(+585 files in other folders)
